fix: make overflow actually hidden

--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 * { margin: 0; }
+html { overflow: hidden; }
 
 body
 {
     // Correctly size page for centering
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
 
     // General positioning
     display: flex;
